# pyyaml-config

./: .gitignore  README.md  pyproject.toml
src/: yaml_config.py
tests/: conftest.py
tests/resources/: invalid.yaml  valid.yaml
tests/unit/: simple_dataclass.py  yaml_config_test.py  yamlparser_test.py
yamlparser/: yamlparser.py
